//
// Copyright 2022 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package micro_rpc.tests;

message LookupDataRequest {
  bytes key = 1;
}
message LookupDataResponse {
  bytes value = 1;
}

message LogRequest {
  string entry = 1;
}
message LogResponse {}

service TestService {
  // method_id: 15
  rpc LookupData(LookupDataRequest) returns (LookupDataResponse);
  // method_id: 16
  rpc Log(LogRequest) returns (LogResponse);
}
