//
// Copyright 2021 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.functions.benchmark;

// A request to execute a benchmark action a specified number of times.
message BenchmarkRequest {
  uint32 iterations = 1;
  oneof action {
    LookupTest lookup = 2;
  }
}

// Container for the key to use when doing a benchmark lookup.
message LookupTest {
  bytes key = 1;
}
